--- a/分布式服务的异常处理.md
+++ b/分布式服务的异常处理.md
@@ -88,7 +88,7 @@ GET /awrongpath
 
 如，订单服务创建订单时参数校验错误，可以使用`code: "order.creation.validation.userid.null"`
 
-这一模式参考自Tomcat的异常处理，Tomcat异常信息的国际化就是利用的语义化key + `ResourceBundle`实现的（N年前因为感兴趣参与过Tomcat公开的国际化支持项目[POEditor - Tomcat](https://poeditor.com/projects/po_edit?id_language=31&id=221603)而了解到的）
+这一模式参考自Tomcat的异常处理，Tomcat异常信息的国际化就是利用的语义化key + `ResourceBundle`实现的（N年前因为感兴趣参与过Tomcat公开的国际化翻译项目[POEditor - Tomcat](https://poeditor.com/projects/po_edit?id_language=31&id=221603)，进而了解了Tomcat源码而了解到的）
 
 ## 总结
 在异常处理的设计上，我的很多观点并不是强制的，每个人都有自己的经验和理由，我的想法也都是基于我自己的实践而总结的。只希望能给不太了解异常处理而迷茫的朋友一些解决思路，或者给经验丰富的人看到一种新鲜的玩法。如果任何新的想法，我会继续补充进来
